Version 0.2.3
-------------

* Show dialog in the first install to choose the favorite player.
* Added "German" translation (by Rainer Peichl).
* Fix infobar hiding (workaround https://bugzilla.gnome.org/show_bug.cgi?id=710888).
* Stop player on exit.
* Updated Spanish translation.

Version 0.2.2
-------------

* Added -Use CSD- option, to enable/disable HeaderBar.  
* Limited Favorite list to only 10 elements.
* Fixed bug when add files/folders contains special characters.
* Updated translations and some other changes.

Version 0.2.1
-------------

* Fix bugs.

Version 0.2.0
-------------

* Check availability of codecs according to encoder
* Show availabe codecs.
* Enhanced video thumbnail (showed with correct aspect ratio).
* New favorite list
* Add global menu (Gnome Shell)
* Allow to choose a player.
* Allow to edit formats.
* Enhanced interface.
* ...

Version 0.2.0 beta
------------------

* Redesigned UI.
* Added OPUS audio format.
* Ported code to Python 3.
* New Dialog for formats with search entry.
* Enhanced setup and reduced dependencies.
* Removed mencoder and depends only on ffmpeg static build.
* Fix bug in restore last size and position.
* Removed double-click option to add file.
* And more...


Version 0.1.22.3
----------------

* Remember last size and position.
* Added "Português - Brazil" translation (by vagner <vagner.unix@gmail.com>).
* Added missing dialog icons (by Ken <lxgator@gmail.com>).
* Updated russian translation.


Version 0.1.22.2
----------------

* Added serbian translation (by Ch_Brozović <chajbo@ro.ru>).


Version 0.1.22.1
----------------

* Updated polish and russian translation.
* sync filesystem before suspend.


Version 0.1.22
--------------

* Updated arabic, czech and basque translations.
* Option to rename input file after successfull conversion.
* Save/load last audio and video properties (restaured).
* Bugs fixes and some UI enhancements.


Version 0.1.21
--------------

* New icons.