@@ -5,9 +5,8 @@ Fixes:
 * Prevent to duplicate file in the same session.
 
 Changes:
-* Use GLib.spawn_* functions instead of subprocess
+
 
 Features:
-* Input options for bad-index AVI,M2V,TS,dump-stream MPEG...!!!
-* ...
+
 
